<resources>
    <string name="app_name">Assignment 1</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">Hello!</string>
    <string name="LoginLabel">login</string>
    <string name="LoginContent">login name</string>

    <string name="PasswordLabel">password</string>
    <string name="switch_message">What does this do?</string>
    <string name="radioLabel">RadioButton</string>
    <string name="checkbox_message">CheckBox</string>
    <string name="dialog_message">Would you like to finish the activity?</string>
    <string name="dialog_title">List Items Activity</string>

    <string name="ok_message">Yes</string>
    <string name="cancel_message">No</string>

    <string name="chatButton">Start Chat</string>

    <string name="send_message">Start Chat</string>
    <string name="title_activity_test_toolbar">Test Toolbar</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="goBack">go back</string>
    <string name="ok">lk</string>
    <string name="cancel">cancel</string>


</resources>