<?xml version="1.0" encoding="utf-8"?>

<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    android:background="@color/white"
    android:columnCount="2"
    android:rowCount="2"
    android:layout_columnWeight="1">

    <RadioButton
        android:text="@string/radioLabel"
        android:layout_columnWeight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radioButton"
        >


    </RadioButton>
    <CheckBox
        android:text="@string/checkbox_message"
        android:layout_columnWeight="1"
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
    </CheckBox>
    <Switch
        android:text="@string/switch_message"
        android:layout_columnWeight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/switchButton">

    </Switch>
    <ImageButton
        android:layout_columnWeight="1"
        android:background="@drawable/ic_upload_photo"
        android:layout_gravity="center"
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickImageButton"
        >

    </ImageButton>
</GridLayout>